# omni-bot

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yaml
src/: client.rs  commands.rs  config.rs  handler.rs  main.rs
