[package]
name = "omni-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serenity = "0.11.5"
simple_logger = { version = "4.0.0", features = ["stderr"] }
toml = "0.7.1"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"